# DAIO

./: README.md  config.example.yaml  implementation_plan.md  pyproject.toml  rules.example.md
daio/: __init__.py  cli.py  config.py  pipeline.py
daio.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
daio/audit/: __init__.py  dataset.py  logger.py  report.py  rollback.py
daio/cartographer/: __init__.py  anchor.py  ast_walker.py  manifest.py  uid.py
daio/sieve/: __init__.py  header.py  snippet.py  token_counter.py  work_packet.py
daio/surgeon/: __init__.py  applicator.py  dispatch.py  extractor.py  llamacpp_client.py  offset.py  ollama_client.py  validator.py
fixtures/synthetic_target/: __init__.py  data_processor.py  math_utils.py  string_helpers.py
tests/: conftest.py  test_audit.py  test_cartographer.py  test_config.py  test_sieve.py  test_smoke.py  test_surgeon.py
